# basic-python-repository-template

./: Pipfile  README.md  pyproject.toml  setup.cfg
mypkg128/: main.py
src/mypkg128/: main.py
